test/expected/explain_attda2i.out
explain _Atomic A x
        ^
9: error: array can not be "_Atomic"
